--- a/src/Components/HomeStyle/HeadEr.css
+++ b/src/Components/HomeStyle/HeadEr.css
@@ -1,3 +1,13 @@
 .Header1 {
   background-color: #0a0a0a;
 }
+@media (max-width: 600px) {
+  .RightSite {
+    display: none;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .RightSites {
+    display: none;
+  }
+}
